# scribble

./: .gitignore  Makefile.am  configure.ac  main.cc  sink.cc  sink.hh  source.cc  source.hh
